added links on the blade to make boostrap load

--- a/laravel-app/resources/sass/app.scss
+++ b/laravel-app/resources/sass/app.scss
@@ -6,3 +6,7 @@
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
+
+// Import Bootstrap styles
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
