--- a/laravel-app/public/assets/css/app.css
+++ b/laravel-app/public/assets/css/app.css
@@ -69,12 +69,18 @@ body {
 /* login */
 .login-page,
 .splash-page,
-.register-page {
+.register-page,
+.forgot-page,
+.error-page {
 	background-color: var(--color-thistle);
 	min-height: 100vh;
 	background-color: var(--color-light);
 	color: var(--color-dimgray);
 	padding: 100px 0;
+}
+.profile-page {
+	min-height: 100vh;
+	box-sizing: border-box;
 }
 .mi {
 	color: var(--color-peru);
@@ -287,4 +293,21 @@ input {
     max-width: 100%;
     max-height: 100%;
     border-radius: 50%;
+}
+
+/* pagination */
+.pagination .page-item {
+	margin-left: 16px !important;
+}
+.pagination .page-item.active .page-link {
+	background-color: white !important;
+	color: var(--color-dimgray) !important;
+	border-color: var(--color-dimgray) !important;
+	border-radius: var(--br-7xs);
+}
+.pagination a {
+	color: var(--color-dimgray) !important;
+	background-color: var(--color-light) !important;
+	border-width: 0 !important;
+	border-radius: var(--br-7xs);
 }
