fix ajax button for follow button as component

--- a/laravel-app/public/assets/css/app.css
+++ b/laravel-app/public/assets/css/app.css
@@ -27,6 +27,8 @@ body {
 --color-peru: #ba7338;
 --color-light: #FDF9F2;
 --color-lightred: rgba(253, 145, 145, 0.6);
+--color-green: rgba(158, 252, 180, 1);
+--color-lightgreen: rgba(158, 252, 180, .3);
 
 /* Gaps */
 --gap-5xl: 24px;
@@ -79,6 +81,12 @@ body {
 	font-weight: bold;
 	font-size: var(--microblog-title-size);
 	line-height: normal;
+}
+.alert-success {
+	text-align: center;
+	background-color: var(--color-lightgreen) !important;
+	border-color: var(--color-lightgreen) !important;
+	color: var(--color-gray) !important;
 }
 
 /* login */
@@ -138,11 +146,14 @@ input {
 	border-radius: 3px;
 	border: 1px solid var(--color-dimgray);
 	padding-right: 10px;
-	background-color: var(--color-light) !important;
+}
+button[disabled] {
+	background-color: var(--color-white);
+	color: var(--color-dimgray) !important;
 }
 .button {
 	border-radius: var(--br-7xs);
-	border: 1px solid var(--color-gray);
+	border: 0;
 	overflow: hidden;
 	flex-direction: row;
 	justify-content: center;
@@ -191,6 +202,13 @@ input {
 .post-card {
 	background-color: var(--color-light) !important;
 	border: 0 !important;
+	padding: 7px 0px;
+}
+.post-card-secondary {
+	background-color: var(--color-thistle) !important;
+}
+.post-card p {
+	margin: 0;
 }
 .post-card-share {
 	border-width: 0 !important;
@@ -201,21 +219,24 @@ input {
 }
 .profile-button {
 	position: relative;
-	width: 50px;
+	width: 57px;
+	height: 55px;
 	cursor: pointer;
 }
 .bg {
+	height: 100%;
 	top: 0;
 	left: 0;
+	color: var(--color-dimgray);
+	font-weight: 700;
 	border-radius: var(--br-11xl);
-	background-color: var(--color-tan);
+	background-color: var(--color-lightgreen);
 	overflow: hidden;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	padding: var(--padding-4xs) var(--padding-base);
-	border: 2px solid var(--color-dimgray);
+	padding: 10px 10px;
 }
 .name,
 .date {
@@ -243,6 +264,21 @@ input {
 .text-share-link {
 	text-decoration: underline !important;
 }
+textarea.form-control {
+	resize: none;
+	border-radius: 0 !important;
+	padding: 1rem !important;
+	border-width: 0 !important;
+	background-color: var(--color-light) !important;
+	border-bottom: 1px solid var(--color-gray) !important;
+	font-size: var(--font-size-smi) !important;
+}
+textarea.comment {
+	background-color: white !important;
+}
+textarea.form-control:focus {
+	border: 0 !important;
+}
 
 /* profile */
 .profile-letter {
@@ -255,14 +291,15 @@ input {
 	top: 0;
 	left: 0;
 	border-radius: var(--br-11xl);
-	background-color: var(--color-tan);
+	color: var(--color-tan);
+	background-color: var(--color-light);
 	overflow: hidden;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	padding: var(--padding-lgi) 62px;
-	border: 2px solid var(--color-peru);
+	border: 4px solid var(--color-tan);
 	width: 100%;
 	height: 100%;
 	font-size: 96px;
@@ -287,15 +324,15 @@ input {
 	flex-shrink: 0;
 }
 .custom-profile-button {
-    width: 50px;
-    height: 50px;
+    width: 57px;
+    height: 55px;
     border: none;
     background: transparent;
     padding: 0;
     margin: 0;
     cursor: pointer;
-    border-radius: 50%; /* Create a circular shape */
-    overflow: hidden; /* Hide the overflow beyond the circle */
+    border-radius: 50%;
+    overflow: hidden;
 	border: 2px solid var(--color-peru);
 }
 .image-bg {
@@ -304,7 +341,7 @@ input {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--color-light);
+    background-color: transparent;
     border-radius: 50%;
 }
 .image-bg img {
